--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
-    <!-- <div class="container"> -->
+    <div class="container">
         <div class="header">
             <div class="container">
                 <h2>ARSHA</h2>
